# bizbrain-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.template.json  package.json  setup.ps1  setup.sh  start.html
.bizbrain/: CHANGELOG.md  VERSION.json  capabilities.json  gui-registry.json  session-state.json  state.json
.bizbrain/credentials/: pending.json
.bizbrain/dashboard/: server.js
.bizbrain/hooks/: conversation-capture.ps1  integration-credential-check.sh  session-end.sh  timesheet-tracker.ps1  timesheet-tracker.sh
.bizbrain/learning/: pending-insights.json
.bizbrain/lib/: wave-execution.md
.bizbrain/migrations/: 1.0.0.js
.bizbrain/modules/: automated-digests.json  chrome-extension.json  clerk.json  client-tracking.json  comms-hub.json  content-factory.json  entity-watchdog.json  github.json  gmail.json  gsd-full.json  gsd-light.json  netlify.json  notion.json  partner-tracking.json  slack.json  slideshow.json  spec-implement.json  stripe.json  supabase.json  timesheet.json  vendor-tracking.json  vercel.json  video-studio.json  voice-input.json
.bizbrain/scripts/: init.js  (+9 more)
.github/: CLA.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
docs/: BIZBRAIN-OS-PRD.md  bizbrain-launch-content.md  launch-checklist.md  launch-week.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brain.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: activity.rs  config.rs  health.rs  launch.rs  mod.rs  modules.rs  state.rs  subprocess.rs  voice.rs
(+202 files in other folders)
